[package]
name = "sf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
async-once-cell = "0.5.4"
axum = "0.7.7"
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
fastrand = "2.2.0"
libaes = "0.7.0"
libsql = "0.6.0"
log = "0.4.22"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sf-api = "0.1.3"
sha1 = "0.10.6"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing-subscriber = "0.3.18"
