[package]
name = "sf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-once-cell = "0.5.4"
axum = "0.7.9"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
enum-map = "2.7"
fastrand = "2.2.0"
log = "0.4.22"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = [
    "gzip",
    "deflate",
    "brotli",
    "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sf-api = { git = "https://github.com/GutZuFusss/sf-api.git", branch = "feature/pvp", version = "0.2.0", default-features = false, features = [
    "serde",
] }
sha1 = "0.10.6"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.18"
